--- a/bitcoin_pages/templates/bitcoin_pages/about-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/about-us.html
@@ -15,7 +15,7 @@ active
 				<div class="row">
 					<div class="col-12 text-center">
 						<div class="single-page-title">
-							<h2>{% trans 'About FonixCoin' %}</h2>
+							<h2>{% trans 'About TraderMines' %}</h2>
 							<p>{% trans 'Delivering quality' %}</p>
 						</div>
 					</div>
@@ -87,7 +87,7 @@ active
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>{% trans 'Bitcoin Legality' %}</h5>
-						<h3>{% trans 'Why Choose' %} <span>FonixCoin</span></h3>
+						<h3>{% trans 'Why Choose' %} <span>TraderMines</span></h3>
 					</div>
 				</div>
 			</div>
@@ -100,7 +100,7 @@ active
 						</div>
 						<div class="single-wcus-text">
 							<h5>{% trans 'Easy Trading' %}</h5>
-							<p>{% trans 'FonixCoin offers a methodical approach to ensure profitability. Each trade is calculated through risk management techniques, technical analysis, and deep fundamental research.' %}</p>
+							<p>{% trans 'TraderMines offers a methodical approach to ensure profitability. Each trade is calculated through risk management techniques, technical analysis, and deep fundamental research.' %}</p>
 						</div>
 					</div>
 				</div>
@@ -112,7 +112,7 @@ active
 						</div>
 						<div class="single-wcus-text">
 							<h5>{% trans 'Trading Strategy' %}</h5>
-							<p>{% trans "Master the basics with Fonixcoin's Crypto Guides, where we take an in-depth look at some of the top projects in this space." %}</p>
+							<p>{% trans "Master the basics with TraderMines's Crypto Guides, where we take an in-depth look at some of the top projects in this space." %}</p>
 						</div>
 					</div>
 				</div>
@@ -136,7 +136,7 @@ active
 						</div>
 						<div class="single-wcus-text">
 							<h5>{% trans 'Security Ensure' %}</h5>
-							<p>{% trans 'Fonixcoin takes a comprehensive approach to protecting your investments. Our team of experts have built in a number of sophisticated measures to prevent the theft of money or information.' %}</p>
+							<p>{% trans 'TraderMines takes a comprehensive approach to protecting your investments. Our team of experts have built in a number of sophisticated measures to prevent the theft of money or information.' %}</p>
 						</div>
 					</div>
 				</div>
@@ -160,7 +160,7 @@ active
 						</div>
 						<div class="single-wcus-text">
 							<h5>{% trans 'Bitcoin Legality' %}</h5>
-							<p>{% trans 'Fonixcoin accepts deposits and provides withdrawals in any of the following crypto assets.' %}</p>
+							<p>{% trans 'TraderMines accepts deposits and provides withdrawals in any of the following crypto assets.' %}</p>
 						</div>
 					</div>
 				</div>
@@ -177,7 +177,7 @@ active
 			<div class="row">
 				<div class="col-12 text-center">
 					<div class="section-title">
-						<h5>{% trans 'FonixCoin conversation' %}</h5>
+						<h5>{% trans 'TraderMines conversation' %}</h5>
 						<h3>{% trans 'Trade Bitcoin' %} <span>{% trans 'With Us' %}</span></h3>
 					</div>
 				</div>
@@ -253,7 +253,7 @@ active
 							</div>
 							<div class="single-team-meta">
 								<h4>Alissa Alexandra</h4>
-								<span>Fonixcoin, {% trans 'Consultant' %}</span>
+								<span>TraderMines, {% trans 'Consultant' %}</span>
 								
 							</div>	
 						</div>							
@@ -281,7 +281,7 @@ active
 							</div>
 							<div class="single-team-meta">
 								<h4>Maeve Owen</h4>
-								<span>Fonixcoin, {% trans 'Broker' %}</span>
+								<span>TraderMines, {% trans 'Broker' %}</span>
 								
 							</div>	
 						</div>							
@@ -295,7 +295,7 @@ active
 							</div>
 							<div class="single-team-meta">
 								<h4>Parbez Lahan Kabeer</h4>
-								<span>Fonixcoin, {% trans 'Broker' %}</span>
+								<span>TraderMines, {% trans 'Broker' %}</span>
 								
 							</div>	
 						</div>							
