--- a/bitcoin_pages/templates/bitcoin_pages/bitcoin_and_ethereum.html
+++ b/bitcoin_pages/templates/bitcoin_pages/bitcoin_and_ethereum.html
@@ -185,7 +185,7 @@
 										<p class="mb-3">{% trans 'For something to store value, people need to recognize and accept that it’s worth something.' %}</p>
 										<ul>
 											<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Acceptability' %} -</strong> {% trans 'There are currently thousands of individuals and vendors accepting Bitcoin payments.' %}</li>
-											<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Buy and sell' %} -</strong> {% trans 'You can also buy and sell BTC for other cryptocurrencies alongside more traditional currencies at exchanges like Fonixcoin.' %}</li>
+											<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Buy and sell' %} -</strong> {% trans 'You can also buy and sell BTC for other cryptocurrencies alongside more traditional currencies at exchanges like TraderMines.' %}</li>
 										</ul>
 									 </div>
 								</div>
