--- a/bitcoin_pages/templates/bitcoin_pages/bitcoin_legality.html
+++ b/bitcoin_pages/templates/bitcoin_pages/bitcoin_legality.html
@@ -116,15 +116,15 @@
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
 							<h4>{% trans 'Service Overview' %}</h4>
-							<p>{% trans "As far as The Platform Technology acts solely as an intermediary bringing together buyers and sellers nothing on the Fonixcoin platform can be ensured to contain no errors, mistakes, mispresentations or failures etc." %}</p>
+							<p>{% trans "As far as The Platform Technology acts solely as an intermediary bringing together buyers and sellers nothing on the TraderMines platform can be ensured to contain no errors, mistakes, mispresentations or failures etc." %}</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-12 mb-lg-0 mb-md-0 mb-4 pl-4 ser-page-into">
 								<ul>
-									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Service Restriction' %} -</strong> {% trans "You shall not use our Services and immediately cease using those if you are a resident or become a resident at any time of the state or region, where Fonixcoin is not authorized to act." %}</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Crypto coins and tokens Policy' %} -</strong> {% trans "Fonixcoin accepts deposits and provides withdrawals in any of the following crypto assets." %}</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'General' %} -</strong>{% trans 'Any individual (the "user"), who opens an account with Fonixcoin understands and accepts that crypto assets do not necessarily have a specific form of protection or regulation by any governmental body.' %}</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Service Restriction' %} -</strong> {% trans "You shall not use our Services and immediately cease using those if you are a resident or become a resident at any time of the state or region, where TraderMines is not authorized to act." %}</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Crypto coins and tokens Policy' %} -</strong> {% trans "TraderMines accepts deposits and provides withdrawals in any of the following crypto assets." %}</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'General' %} -</strong>{% trans 'Any individual (the "user"), who opens an account with TraderMines understands and accepts that crypto assets do not necessarily have a specific form of protection or regulation by any governmental body.' %}</li>
 								</ul>
 							</div>
 							<!-- end col -->
@@ -164,7 +164,7 @@
 									<div class="tab-pane animated fadeInRight active show" id="srone">
 										<div class="row">
 											<div class="col-lg-5 col-md-5 col-12 mb-lg-0 mb-md-0 mb-sm-3 mb-3">
-												<p>{% trans "However, Fonixcoin reserves the right to reject any deposits and suspend withdrawals which its compliance and risk management service provider has decided to be the result of detecting of suspicious activity such as criminal activity or any other infringement of its compliance guidelines." %}</p>										
+												<p>{% trans "However, TraderMines reserves the right to reject any deposits and suspend withdrawals which its compliance and risk management service provider has decided to be the result of detecting of suspicious activity such as criminal activity or any other infringement of its compliance guidelines." %}</p>										
 											</div>
 											<div class="col-lg-7 col-md-7 col-12 mt-4">
 												<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
