--- a/bitcoin_pages/templates/bitcoin_pages/bitcoin_trading.html
+++ b/bitcoin_pages/templates/bitcoin_pages/bitcoin_trading.html
@@ -185,7 +185,7 @@
 										</div>
 									</div>
 									<div class="tab-pane animated fadeInRight" id="srthree">
-										<p class="mb-3">{% trans "FonixCoin makes it simple and safe to buy, sell, and hold BTC." %}</p>
+										<p class="mb-3">{% trans "TraderMines makes it simple and safe to buy, sell, and hold BTC." %}</p>
 										<ul>
 											<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Convert' %} -</strong>{% trans "Want to own other crypto? Convert any portion of your Bitcoin balance to another crypto." %}</li>
 											<li><i class="icofont icofont-ui-press"></i> <strong>{% trans 'Transfer' %} -</strong> {% trans "Unlike sending money overseas, you can send Bitcoin to anyone in the world virtually instantly." %}</li>
