--- a/bitcoin_pages/templates/bitcoin_pages/crypto_trading.html
+++ b/bitcoin_pages/templates/bitcoin_pages/crypto_trading.html
@@ -117,7 +117,7 @@
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
 							<h4>{% trans 'Service Overview' %}</h4>
-							<p>{% trans 'A cryptocurrency exchange is a service for changing digital currencies, such as Bitcoin, Ethereum, and more, to fiat (paper) currencies or for other digital currencies. At Fonixcoin, you can exchange your fiat currency, such as dollars or Euro, for several cryptocurrencies. You can also exchange your Bitcoin for fiat.' %}</p>
+							<p>{% trans 'A cryptocurrency exchange is a service for changing digital currencies, such as Bitcoin, Ethereum, and more, to fiat (paper) currencies or for other digital currencies. At TraderMines, you can exchange your fiat currency, such as dollars or Euro, for several cryptocurrencies. You can also exchange your Bitcoin for fiat.' %}</p>
 						</div>
 						<!-- end col -->
 					</div>
@@ -153,7 +153,7 @@
 										</div>
 									</div>
 									<div class="tab-pane animated fadeInRight" id="srthree">
-										<p class="mb-3">{% trans "With Fonixcoin, you can skip complex processes like mining and just buy and trade cryptocurrency securely with your credit or debit card. Let’s get started!" %}</p>
+										<p class="mb-3">{% trans "With TraderMines, you can skip complex processes like mining and just buy and trade cryptocurrency securely with your credit or debit card. Let’s get started!" %}</p>
 									 </div>
 								</div>
 							</div>
