--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -18,7 +18,7 @@ active
 							<div class="col-lg-7 col-md-10 col-12 mr-auto text-left">
 								<div class="home-single-slide-dec">
 									<h2>{% trans "Secure & easy way to" %} {% trans "buy & sell bitcoin" %}</h2>
-									<p class="text-capitalize">{% trans "We put the power in your hands, to buy, sell and trade digital currency. We are FonixCoin, consistently rated the best and most secure cryptocurrency exchange." %}</p>
+									<p class="text-capitalize">{% trans "We put the power in your hands, to buy, sell and trade digital currency. We are TraderMines, consistently rated the best and most secure cryptocurrency exchange." %}</p>
 									<div class="home-single-slide-button">
 										<a href="#" class="btn-style btn-filled">{% trans 'Learn More' %}</a>
 										<a href="{% url 'my-auth:create' %}" class="btn-style btn-border">{% trans "Get started" %}</a>
@@ -81,7 +81,7 @@ active
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>{% trans 'why buy & sell' %}</h5>
-						<h3>FonixCoin <span>{% trans 'Features' %}</span></h3>
+						<h3>TraderMines <span>{% trans 'Features' %}</span></h3>
 					</div>
 				</div>
 			</div>
@@ -102,7 +102,7 @@ active
 								<h5>{% trans 'Bitcoin Trading' %}</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>{% trans 'FonixCoin has consistently taken measures to makes online trading and investing accessible' %} </p>
+								<p>{% trans 'TraderMines has consistently taken measures to makes online trading and investing accessible' %} </p>
 							</div>
 						</div>
 					</div>
@@ -123,7 +123,7 @@ active
 								<h5>{% trans 'Coin Buy & Sell' %}</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>{% trans 'With FonixCoin, you can easily buy Bitcoin with cash' %}.</p>
+								<p>{% trans 'With TraderMines, you can easily buy Bitcoin with cash' %}.</p>
 							</div>
 						</div>
 					</div>
@@ -186,7 +186,7 @@ active
 								<h5>{% trans 'Cryptocurrency Trading' %}</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>{% trans 'Bank on FonixCoin’s experience as a global fintech leader.' %}</p>
+								<p>{% trans 'Bank on TraderMines’s experience as a global fintech leader.' %}</p>
 							</div>
 						</div>
 					</div>
@@ -207,7 +207,7 @@ active
 								<h5>{% trans 'Bitcoin Legality' %}</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>{% trans "Access crypto assets exchange platform technology under the registered trademark" %} "FonixCoin"</p>
+								<p>{% trans "Access crypto assets exchange platform technology under the registered trademark" %} "TraderMines"</p>
 							</div>
 						</div>
 					</div>
@@ -249,7 +249,7 @@ active
                                 <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>{% trans 'What is a Cryptocurrency Exchange?' %}</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>{% trans 'A cryptocurrency exchange is a service for changing digital currencies, such as Bitcoin, Ethereum, and more, to fiat (paper) currencies or for other digital currencies. At FonixCoin, you can exchange your fiat currency, such as dollars or Euro, for several cryptocurrencies. You can also exchange your Bitcoin for fiat.' %}</p>
+                                    <p>{% trans 'A cryptocurrency exchange is a service for changing digital currencies, such as Bitcoin, Ethereum, and more, to fiat (paper) currencies or for other digital currencies. At TraderMines, you can exchange your fiat currency, such as dollars or Euro, for several cryptocurrencies. You can also exchange your Bitcoin for fiat.' %}</p>
                                 </div>
                             </div>
                         </li>
@@ -260,7 +260,7 @@ active
                                 <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>{% trans 'Why must I provide my personal details?' %}</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>{% trans 'Before creating your first order, we need to know a bit about you. As a financial service, FonixCoin is committed to the highest security and privacy standards. This also helps us keep your account safe, fight fraud, and more. The process is called verification and is something everyone must go through before buying cryptocurrency anywhere. After submitting your details for verification, we’ll then quickly go over it and make sure everything looks good. This usually happens within the hour.' %}</p>
+                                    <p>{% trans 'Before creating your first order, we need to know a bit about you. As a financial service, TraderMines is committed to the highest security and privacy standards. This also helps us keep your account safe, fight fraud, and more. The process is called verification and is something everyone must go through before buying cryptocurrency anywhere. After submitting your details for verification, we’ll then quickly go over it and make sure everything looks good. This usually happens within the hour.' %}</p>
                                 </div>
                             </div>
                         </li>
@@ -268,10 +268,10 @@ active
                         <!--Block-->
                         <li class="accordion block">
                             <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>{% trans 'How long does it take for FonixCoin to send my bitcoins once I’ve paid?' %}</div>
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>{% trans 'How long does it take for TraderMines to send my bitcoins once I’ve paid?' %}</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>{% trans 'FonixCoin sends the coins immediately after both your payment and wallet address have been confirmed.' %}</p>
+                                    <p>{% trans 'TraderMines sends the coins immediately after both your payment and wallet address have been confirmed.' %}</p>
                                 </div>
                             </div>
                         </li>
@@ -282,7 +282,7 @@ active
                                 <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>{% trans 'Where can I get a Bitcoin/Ethereum wallet?' %}</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>{% trans 'FonixCoin is not a wallet provider - we simply send your coins to the wallet of your choice.' %}</p>
+                                    <p>{% trans 'TraderMines is not a wallet provider - we simply send your coins to the wallet of your choice.' %}</p>
                                 </div>
                             </div>
                         </li>
@@ -290,10 +290,10 @@ active
                         <!--Block-->
                         <li class="accordion block">
                             <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>{% trans 'What methods of payment does FonixCoin offer?' %}</div>
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>{% trans 'What methods of payment does TraderMines offer?' %}</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>{% trans 'At FonixCoin you can currently buy bitcoin and other cryptocurrencies with bank wire transfer.' %}</p>
+                                    <p>{% trans 'At TraderMines you can currently buy bitcoin and other cryptocurrencies with bank wire transfer.' %}</p>
                                 </div>
                             </div>
                         </li>
@@ -320,7 +320,7 @@ active
 					</div>
 					<div class="promo-content">
 						<h4>{% trans 'Who we are?' %}</h4>
-						<p>FonixCoin, {% trans 'founded in 2013 by experienced system architects and technology experts, is one of the oldest and fastest growing crypto exchanges in existence. With an unparalleled track record of reliability.' %}</p>
+						<p>TraderMines, {% trans 'founded in 2013 by experienced system architects and technology experts, is one of the oldest and fastest growing crypto exchanges in existence. With an unparalleled track record of reliability.' %}</p>
 						<a href="{% url 'about-us' %}" class="btn-style btn-filled mt-3">{% trans 'Read More' %} <i class="icofont icofont-caret-right"></i></a>
 						<div class="signature-img float-lg-right float-md-right float-none mt-3"><img src="{% static 'assets/img/bg/signature.png' %}" class="img-fluid" alt=""></div>
 					</div>	
@@ -338,7 +338,7 @@ active
 			<div class="row">
 				<div class="col-12 text-center">
 					<div class="section-title">
-						<h3>{% trans 'Why Choose' %} <span>FonixCoin</span></h3>
+						<h3>{% trans 'Why Choose' %} <span>TraderMines</span></h3>
 					</div>
 				</div>
 			</div>
@@ -353,7 +353,7 @@ active
 								</div>
 								<div class="single-wcus-text">
 									<h5>{% trans 'Easy Trading' %}</h5>
-									<p>{% trans 'Our terminal is built on the best technology and lets you trade effortlessly any of the FonixCoin currency pair.' %}</p>
+									<p>{% trans 'Our terminal is built on the best technology and lets you trade effortlessly any of the TraderMines currency pair.' %}</p>
 								</div>
 							</div>
 						</div>
@@ -377,7 +377,7 @@ active
 								</div>
 								<div class="single-wcus-text">
 									<h5>{% trans 'Money Exchange' %}</h5>
-									<p>{% trans 'FonixCoin offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, and many other digital assets with minimal slippage' %}</p>
+									<p>{% trans 'TraderMines offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, and many other digital assets with minimal slippage' %}</p>
 								</div>
 							</div>
 						</div>
@@ -420,7 +420,7 @@ active
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>{% trans 'what we do' %}</h5>
-						<h3>FonixCoin <span>{% trans 'Services' %}</span></h3>
+						<h3>TraderMines <span>{% trans 'Services' %}</span></h3>
 					</div>
 				</div>
 			</div>
@@ -440,7 +440,7 @@ active
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>{% trans 'FonixCoin has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone.' %}</p>
+							<p>{% trans 'TraderMines has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone.' %}</p>
 						</div>	
 					</div>							
 				</div>
@@ -459,7 +459,7 @@ active
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>{% trans 'With FonixCoin, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.' %}</p>
+							<p>{% trans 'With TraderMines, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.' %}</p>
 						</div>	
 					</div>							
 				</div>
@@ -478,7 +478,7 @@ active
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>{% trans 'Bitcoin and Ethereum is an open source network, much more than just a digital currency. At FonixCoin, we not only trade your assets, we secure it as well.' %}</p>
+							<p>{% trans 'Bitcoin and Ethereum is an open source network, much more than just a digital currency. At TraderMines, we not only trade your assets, we secure it as well.' %}</p>
 						</div>	
 					</div>							
 				</div>
@@ -497,7 +497,7 @@ active
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>{% trans 'Bank on FonixCoin’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.' %}</p>
+							<p>{% trans 'Bank on TraderMines’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.' %}</p>
 						</div>	
 					</div>							
 				</div>
@@ -521,7 +521,7 @@ active
 			<div class="row">
 				<div class="col-12 text-center">
 					<div class="section-title">
-						<h5>{% trans 'FonixCoin conversation' %}</h5>
+						<h5>{% trans 'TraderMines conversation' %}</h5>
 						<h3>{% trans 'Trade Bitcoin' %} <span>{% trans 'With Us' %}</span></h3>
 					</div>
 				</div>
@@ -581,7 +581,7 @@ active
 						</div>
 						<div class="single-wprocess-text">
 							<h5>{% trans 'Trading Strategy' %}</h5>
-							<p>{% trans 'FonixCoin implements reliable strategies by providing our users with state-of-the-art trading tools, innovative technology and unparalleled levels of customer service.' %}</p>
+							<p>{% trans 'TraderMines implements reliable strategies by providing our users with state-of-the-art trading tools, innovative technology and unparalleled levels of customer service.' %}</p>
 						</div>
 					</div>
 				</div>
@@ -593,7 +593,7 @@ active
 						</div>
 						<div class="single-wprocess-text">
 							<h5>{% trans 'Group Planing' %}</h5>
-							<p>{% trans 'Never trade crypto alone. FonixCoin is much more than just a place to trade. Use award-winning social trading features to connect with over 10 million users worldwide.' %}</p>
+							<p>{% trans 'Never trade crypto alone. TraderMines is much more than just a place to trade. Use award-winning social trading features to connect with over 10 million users worldwide.' %}</p>
 						</div>
 					</div>
 				</div>
@@ -637,7 +637,7 @@ active
 									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/13.jpg' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p>{% trans "It's been a pleasure trading with FonixCoin. Great platform for starting traders. Great selsection and transparent fee system." %}</p>
+									<p>{% trans "It's been a pleasure trading with TraderMines. Great platform for starting traders. Great selsection and transparent fee system." %}</p>
 								</div>
 								<div class="single-testimonial-meta">
 									<p>- Yvelmkens fjord</p>
@@ -649,7 +649,7 @@ active
 									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/12.jpg' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p>{% trans 'So easy and fun as i ahvent had to do much. FonixCoin has been making my trading experience enjoyable and secure.' %}</p>
+									<p>{% trans 'So easy and fun as i ahvent had to do much. TraderMines has been making my trading experience enjoyable and secure.' %}</p>
 								</div>
 								<div class="single-testimonial-meta">
 									<p>- Mcleroy rhithers</p>
@@ -661,7 +661,7 @@ active
 									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/11.jpg' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p>{% trans "FonixCoin is a fantastic trading platform, both from an ease of use and technical perspective. I'm very satisfied with the service they FonixCoin provide. keep it up." %}</p>
+									<p>{% trans "TraderMines is a fantastic trading platform, both from an ease of use and technical perspective. I'm very satisfied with the service they TraderMines provide. keep it up." %}</p>
 								</div>
 								<div class="single-testimonial-meta">
 									<p>- Aleixy shalom</p>
@@ -673,7 +673,7 @@ active
 									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/test.png' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p>{% trans 'FonixCoin has made cryptocurrency trading so easy that i rarely have to do anything complex, i just watch and see my asset grow. Quite remarkable i must say.' %}</p>
+									<p>{% trans 'TraderMines has made cryptocurrency trading so easy that i rarely have to do anything complex, i just watch and see my asset grow. Quite remarkable i must say.' %}</p>
 								</div>
 								<div class="single-testimonial-meta">
 									<p>- Brandon Eduardo</p>
@@ -728,11 +728,11 @@ active
 							<img class="img-fluid" src="{% static 'assets/img/blog/1.jpg' %}" alt="">
 						</div>
 						<div class="single-blog-hdec">
-							<a href="#"><h5>Fonixcoin Introduces No-Fee USD Deposits with Signature and MVB Bank</h5></a>
+							<a href="#"><h5>TraderMines Introduces No-Fee USD Deposits with Signature and MVB Bank</h5></a>
 							<span class="post-date"><i class="icofont icofont-calendar"></i> 03 Sep 2020</span>
 							<span class="post-comment"><i class="fa fa-comment"></i> 3 comments</span>
 							<p>
-								Funding your Fonixcoin account is now easier, faster and more cost-effective with our newest integration with Signature Bank.
+								Funding your TraderMines account is now easier, faster and more cost-effective with our newest integration with Signature Bank.
 								<a href="#">[...]</a>
 							</p>
 							<div class="single-blog-hadmin">
@@ -753,11 +753,11 @@ active
 							<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
 						</div>
 						<div class="single-blog-hdec">
-							<a href="#"><h5>C-C-C-COMBO BREAKER:Fonixcoin Releases July 2020 Bitcoin Volatility Report</h5></a>
+							<a href="#"><h5>C-C-C-COMBO BREAKER:TraderMines Releases July 2020 Bitcoin Volatility Report</h5></a>
 							<span class="post-date"><i class="icofont icofont-calendar"></i> 18 July 2020</span>
 							<span class="post-comment"><i class="fa fa-comment"></i> 18 comments</span>
 							<p>
-								VIP clients are the first to receive Fonixcoin Intelligence reports. If you’d like early access to our latest research, sign up to trade with us today.
+								VIP clients are the first to receive TraderMines Intelligence reports. If you’d like early access to our latest research, sign up to trade with us today.
 								<a href="#">[...]</a>
 							</p>
 							<div class="single-blog-hadmin">
@@ -778,7 +778,7 @@ active
 							<img class="img-fluid" src="{% static 'assets/img/blog/3.jpg' %}" alt="">
 						</div>
 						<div class="single-blog-hdec">
-							<a href="#"><h5>FonixCoin Custody is Officially Open For Business</h5></a>
+							<a href="#"><h5>TraderMines Custody is Officially Open For Business</h5></a>
 							<span class="post-date"><i class="icofont icofont-calendar"></i> 19 Dec 2019</span>
 							<span class="post-comment"><i class="fa fa-comment"></i> 4 comments</span>
 							<p>
