--- a/bitcoin_pages/templates/bitcoin_pages/security_ensure.html
+++ b/bitcoin_pages/templates/bitcoin_pages/security_ensure.html
@@ -116,7 +116,7 @@
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
 							<h4>{% trans 'Service Overview' %}</h4>
-							<p>{% trans 'Security of user information and funds is our first priority. Learn more about our security features and integrations.The Fonixcoin REST and Websocket APIs are designed to facilitate access to all features of the FonixCoin platform, allowing full integration with traders’ own products and platforms.' %}</p>
+							<p>{% trans 'Security of user information and funds is our first priority. Learn more about our security features and integrations.The TraderMines REST and Websocket APIs are designed to facilitate access to all features of the TraderMines platform, allowing full integration with traders’ own products and platforms.' %}</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
@@ -178,7 +178,7 @@
 												<img class="img-fluid" src="{% static 'assets/img/blog/1.jpg' %}" alt="">
 											</div>
 											<div class="col-lg-5 col-md-5 col-12">
-												<p>{% trans 'Fonixcoin takes a comprehensive approach to protecting your investments. Our team of experts have built in a number of sophisticated measures to prevent the theft of money or information.' %}</p>										
+												<p>{% trans 'TraderMines takes a comprehensive approach to protecting your investments. Our team of experts have built in a number of sophisticated measures to prevent the theft of money or information.' %}</p>										
 											</div>
 										</div>
 									</div>
