--- a/bitcoin_pages/templates/bitcoin_pages/services.html
+++ b/bitcoin_pages/templates/bitcoin_pages/services.html
@@ -14,7 +14,7 @@ active
 				<div class="row">
 					<div class="col-12 text-center">
 						<div class="single-page-title">
-							<h2>{% trans 'FonixCoin Services' %}</h2>
+							<h2>{% trans 'TraderMines Services' %}</h2>
 							<p>{% trans 'Our Range of Sevices' %}</p>
 						</div>
 					</div>
@@ -57,7 +57,7 @@ active
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>{% trans 'FonixCoin has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone.' %}
+								<p>{% trans 'TraderMines has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone.' %}
 									<a href="{% url 'bitcoin_trading' %}">[...]</a>
 								</p>
 							</div>	
@@ -80,7 +80,7 @@ active
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>{% trans 'With FonixCoin, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.' %}
+								<p>{% trans 'With TraderMines, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.' %}
 									<a href="{% url 'coin_buy' %}">[...]</a>
 								</p>
 							</div>	
@@ -103,7 +103,7 @@ active
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>{% trans 'Bitcoin and Ethereum is an open source network, much more than just a digital currency. At FonixCoin, we not only trade your assets, we secure it as well.' %}
+								<p>{% trans 'Bitcoin and Ethereum is an open source network, much more than just a digital currency. At TraderMines, we not only trade your assets, we secure it as well.' %}
 									<a href="{% url 'bitcoin_ethereum' %}">[...]</a>
 								</p>
 							</div>	
@@ -126,7 +126,7 @@ active
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>{% trans 'Bank on FonixCoin’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.' %}
+								<p>{% trans 'Bank on TraderMines’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.' %}
 									<a href="{% url 'crypto_trading' %}">[...]</a>
 								</p>
 							</div>	
@@ -149,7 +149,7 @@ active
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>{% trans 'FONIX Solution Ltd (hereinafter "The Platform Technology") provides access to crypto assets exchange platform technology under the registered trademark "FonixCoin".' %}
+								<p>{% trans 'FONIX Solution Ltd (hereinafter "The Platform Technology") provides access to crypto assets exchange platform technology under the registered trademark "TraderMines".' %}
 									<a href="{% url 'bitcoin_legality' %}">[...]</a>
 								</p>
 							</div>	
@@ -172,7 +172,7 @@ active
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>{% trans 'FonixCoin takes every necessary precaution to keep its clients’ personal information and funds safe and secure.' %}
+								<p>{% trans 'TraderMines takes every necessary precaution to keep its clients’ personal information and funds safe and secure.' %}
 									<a href="{% url 'security_ensure' %}">[...]</a>
 								</p>
 							</div>	
