--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
-    <title>FonixCoin - Bitcoin And Crypto Currency Trading</title>
+    <title>TraderMines - Bitcoin And Crypto Currency Trading</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Google Font  -->
@@ -158,14 +158,14 @@
 								<i class="fa fa-envelope-open"></i>
 							</div>
 							<p>{% trans "Email Us" %}</p>
-                            <h6>support@fonixcoin.com</h6>
+                            <h6>support@tradermines.com</h6>
                         </div>
 						<div class="header-info-box">
                             <div class="header-info-icon">
 								<i class="icofont icofont-phone"></i>
 							</div>
 							<p>{% trans "Call Us" %}</p>
-                            <h6>+44-748-0071-025</h6>
+                            <h6>+44-748-0071-022</h6>
                         </div>
 						<div class="header-info-box">
                             <a href="#" class="quote-btn">{% trans "Get started" %} <i class="icofont icofont-caret-right"></i></a>
@@ -234,7 +234,7 @@
                                  <i class="fab fa-gg-circle"></i>
                                 </div>
 								<div class="footer-logo-text">
-                                    <h3>FonixCoin</h3>
+                                    <h3>TraderMines</h3>
                                     <p>{% trans 'Bitcoin Trading Center' %}</p>
                                 </div>
 							</a>
@@ -279,21 +279,21 @@
 							<div class="singleRecpost">
 								<img src="{% static 'assets/img/blog/1.jpg' %}" alt="" class="img-fluid">
 								<h6 class="recTitle">
-									<a href="#">Fonixcoin Introduces No-Fee USD Deposits with Signature and MVB Bank</a>
+									<a href="#">TraderMines Introduces No-Fee USD Deposits with Signature and MVB Bank</a>
 								</h6>
 								<p class="posted-on">3 SEP 2020</p>
 							</div>
 							<div class="singleRecpost">
 								<img src="{% static 'assets/img/blog/2.jpg' %}" alt="" class="img-fluid">
 								<h6 class="recTitle">
-									<a href="#">Fonixcoin Releases July 2020 Bitcoin Volatility Report</a>
+									<a href="#">TraderMines Releases July 2020 Bitcoin Volatility Report</a>
 								</h6>
 								<p class="posted-on">18 JUL 2020</p>
 							</div>
 							<div class="singleRecpost">
 								<img src="{% static 'assets/img/blog/3.jpg' %}" alt="" class="img-fluid">
 								<h6 class="recTitle">
-									<a href="#">FonixCoin Custody is Officially Open For Business.</a>
+									<a href="#">TraderMines Custody is Officially Open For Business.</a>
 								</h6>
 								<p class="posted-on">19 DEC 2019</p>
 							</div>
@@ -321,7 +321,7 @@
 								</div>
 								<div class="single-fcontact-des">
 									<h6>{% trans 'Phone Number' %}:</h6>
-									<p>+44-748-0071-025</p>
+									<p>+44-748-0071-022</p>
 								</div>
 							</div>
 							<div class="single-fcontact">
@@ -338,7 +338,7 @@
 							<div class="footer-social">
 								<ul>
 									<li><a href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									<li><a href="https://www.instagram.com/fonixcoin" target="_blank"><i class="icofont icofont-social-instagram"></i></a></li>
+									<li><a href="#"><i class="icofont icofont-social-instagram"></i></a></li>
 								</ul>
 							</div>
 						</div>
