--- a/transactions/templates/transactions/bank_details.html
+++ b/transactions/templates/transactions/bank_details.html
@@ -30,51 +30,10 @@
         <div class="box-body">
           <div class="row">
             <div class="col">
-              <h3>{% trans 'Recipient Name' %}:</h3>
-            </div>
-            <div class="col-8 align-left">
-              <h3>{{ details.recipient_name }}</h3>
+              <h3>We're sorry, this payemnt method is currently unavailable</h3>
             </div>
             <!-- /.col -->
           </div>
-          <div class="row">
-            <div class="col">
-              <h3>{% trans 'Bank Name' %}:</h3>
-            </div>
-            <div class="col-8 align-left">
-              <h3>{{ details.bank_name }}</h3>
-            </div>
-            <!-- /.col -->
-          </div>
-          <div class="row">
-            <div class="col">
-              <h3>{% trans 'Sort Code' %}:</h3>
-            </div>
-            <div class="col-8 align-left">
-              <h3>{{ details.sort_code }}</h3>
-            </div>
-            <!-- /.col -->
-          </div>
-          <div class="row">
-            <div class="col">
-              <h3>{% trans 'Account Number' %}:</h3>
-            </div>
-            <div class="col-8 align-left">
-              <h3>{{ details.account_number }}</h3>
-            </div>
-            <!-- /.col -->
-          </div>
-          <!-- /.row -->
-          <div class="row">
-            <div class="col">
-              <h3>{% trans 'Reference' %}:</h3>
-            </div>
-            <div class="col-8 align-left">
-              <h3>{{ details.reference }}</h3>
-            </div>
-            <!-- /.col -->
-          </div>
-
         </div>
         <!-- /.box-body -->
       </div>
