--- a/users/templates/registration/email_create.html
+++ b/users/templates/registration/email_create.html
@@ -9,5 +9,5 @@ http://{{ domain }}{% url 'my-auth:activate' uidb64=uid token=token %}
 
 
 Sincerly,
-Fonixcoin management
+TraderMines management
 {% endautoescape %}
