--- a/users/templates/registration/user_activate_failed.html
+++ b/users/templates/registration/user_activate_failed.html
@@ -41,7 +41,7 @@
 			<!-- end section title -->
 			<div class="row">
                 <div class="col-lg-7 mx-auto">
-                    <p>{% trans 'Your Fonixcoin account activation failed' %}</p></br>
+                    <p>{% trans 'Your TraderMines account activation failed' %}</p></br>
                     <p>{% trans 'Activation link not valid or expired, please restart your registration.' %}</p>
                 </div>
 			</div>
