--- a/users/templates/registration/user_create_done.html
+++ b/users/templates/registration/user_create_done.html
@@ -41,7 +41,7 @@
 			<!-- end section title -->
 			<div class="row">
                 <div class="col-lg-7 mx-auto">
-                    <p>{% trans 'Your Fonixcoin account has been successfully created' %}</p></br>
+                    <p>{% trans 'Your TraderMines account has been successfully created' %}</p></br>
                     <p>{% trans 'Please check your email for Confirmation link to activate your account' %}</p>
                 </div>
 			</div>
