--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -46,7 +46,7 @@ active
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>{% trans 'response with in minute' %}</h5>
-						<h3>{% trans 'Contact' %} <span>FonixCoin</span></h3>
+						<h3>{% trans 'Contact' %} <span>TraderMines</span></h3>
 					</div>
 				</div>
 			</div>
@@ -59,7 +59,7 @@ active
 						</div>
 						<div class="single-address-dec">
 							<h4>{% trans 'Write a mail' %}</h4>
-							<p>{% trans 'Email' %}: support@fonixcoin.com</p>
+							<p>{% trans 'Email' %}: support@TraderMines.com</p>
 						</div>
 						<div class="single-address-link">
 							<a href="#">{% trans 'quick Send' %}</a>
@@ -74,8 +74,8 @@ active
 						</div>
 						<div class="single-address-dec">
 							<h4>{% trans 'Give a call' %}</h4>
-							<p>{% trans 'Phone' %}:+44-748-0071-025 </p>
-							<p>{% trans 'Phone' %}: +1-470-673-1900</p>
+							<p>{% trans 'Phone' %}:+44-748-0071-022 </p>
+							<p>{% trans 'Phone' %}: +1-470-673-1911</p>
 						</div>
 						<div class="single-address-link">
 							<a href="#">quick call</a>
@@ -105,7 +105,7 @@ active
 						</div>
 						<div class="single-address-dec">
 							<h4>{% trans "Lets's have a chat" %}</h4>
-							<p>{% trans 'Telephone' %}: +44-748-0071-025</p>
+							<p>{% trans 'Telephone' %}: +44-748-0071-022</p>
 	
 						</div>
 						<div class="single-address-link">
