--- a/templates/500.html
+++ b/templates/500.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
-    <title>FonixCoin - Bitcoin And Crypto Currency Trading</title>
+    <title>TraderMines - Bitcoin And Crypto Currency Trading</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Google Font  -->
@@ -82,14 +82,14 @@
 								<i class="fa fa-envelope-open"></i>
 							</div>
 							<p>Email Us</p>
-                            <h6>support@fonixcoin.com</h6>
+                            <h6>support@tradermines.com</h6>
                         </div>
 						<div class="header-info-box">
                             <div class="header-info-icon">
 								<i class="icofont icofont-phone"></i>
 							</div>
 							<p>Call Us</p>
-                            <h6>+1-470-673-1900</h6>
+                            <h6>+1-470-673-1911</h6>
                         </div>
 						<div class="header-info-box">
                             <a href="#" class="quote-btn">Get Started <i class="icofont icofont-caret-right"></i></a>
@@ -167,7 +167,7 @@
 							 <i class="fab fa-gg-circle"></i>
 							</div>
 							<div class="footer-logo-text">
-								<h3>FonixCoin</h3>
+								<h3>TraderMines</h3>
 								<p>Bitcoin Trading Center</p>
 							</div>
 						</a>
@@ -213,21 +213,21 @@
 						<div class="singleRecpost">
 							<img src="{% static 'assets/img/blog/1.jpg' %}" alt="" class="img-fluid">
 							<h6 class="recTitle">
-								<a href="#">Fonixcoin Introduces No-Fee USD Deposits with Signature and MVB Bank</a>
+								<a href="#">TraderMines Introduces No-Fee USD Deposits with Signature and MVB Bank</a>
 							</h6>
 							<p class="posted-on">3 SEP 2020</p>
 						</div>
 						<div class="singleRecpost">
 							<img src="{% static 'assets/img/blog/2.jpg' %}" alt="" class="img-fluid">
 							<h6 class="recTitle">
-								<a href="#">Fonixcoin Releases July 2020 Bitcoin Volatility Report</a>
+								<a href="#">TraderMines Releases July 2020 Bitcoin Volatility Report</a>
 							</h6>
 							<p class="posted-on">18 JUL 2020</p>
 						</div>
 						<div class="singleRecpost">
 							<img src="{% static 'assets/img/blog/3.jpg' %}" alt="" class="img-fluid">
 							<h6 class="recTitle">
-								<a href="#">FonixCoin Custody is Officially Open For Business.</a>
+								<a href="#">TraderMines Custody is Officially Open For Business.</a>
 							</h6>
 							<p class="posted-on">19 DEC 2019</p>
 						</div>
@@ -255,7 +255,7 @@
 							</div>
 							<div class="single-fcontact-des">
 								<h6>Phone Number:</h6>
-								<p>+1-470-673-1900</p>
+								<p>+1-470-673-1911</p>
 							</div>
 						</div>
 						<div class="single-fcontact">
