--- a/users/templates/registration/user_activated.html
+++ b/users/templates/registration/user_activated.html
@@ -41,7 +41,7 @@
 			<!-- end section title -->
 			<div class="row">
                 <div class="col-lg-7 mx-auto">
-                    <p>{% trans 'Your Fonixcoin account has been successfully activated' %}</p></br>
+                    <p>{% trans 'Your TraderMines account has been successfully activated' %}</p></br>
                     <p>{% trans 'Please login' %} <a href="{% url 'my-auth:login' %}">{% trans 'HERE' %}</a></p>
                 </div>
 			</div>
